--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,24 +5,32 @@
         <%- include('./partials/nav') %>
 
         <section class="new-entries">
+            
 
             <% if(blogs.length > 0){ %>
                 <% blogs.forEach(rec => { %>
-                    <a href="/about/<%=rec._id %> ">
-                        <div class="img-dis">
-                            <div class="new-image" name="image"
-                                style="background-image: url('./../uploads/<%= rec.image %>'); background-size: cover;"> </div>
-
-                    </a>
                     
-
+                    <div class="each-item">
+                    
+                        <a href="/about/<%=rec._id %> ">
+                            <div class="img-dis">
+                                <div class="new-image" name="image"
+                                    style="background-image: url('./../uploads/<%= rec.image %>'); background-size: cover;"> </div>
+                        
+                        </a>
+                        
+                        
                         <div class="dets">
                             <ul>
-                                <li> Recipe Name:<%=rec.recName%> </li>
-                                <li> Category: <%= rec.category %></li>
+                                <li class="name"> <%=rec.recName%> </li>
+                                <li> <%= rec.category %></li>
+                                <li> By:<%= rec.writer%></li>
                             </ul>
-                    
+                        
                         </div>
+                    </div>
+        </div>
+
                 <% }) %>
                 <% } else { %>
                     <p><%= "No posts to display currently" %> </p>
