--- a/public/login.css
+++ b/public/login.css
@@ -137,41 +137,79 @@ nav ul li:hover .drop-down {
     scale: 1.1;
 }
 
-
-.new-entries{
-    background-color:rgba(0, 0, 0, 0.671);
-    min-height: 40em;
-    width: 80vw;
+.formBx {
+    position: relative;
+    width: 38em;
+    height: 43em;
+    background: rgba(0, 0, 0, 0.548);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    transition: 0.5s;
     margin: auto;
     margin-top: 4em;
-    padding: 5em;
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
+    margin-bottom: 4em;
+}
 
-}
-.new-image{
-    height: 13em;
-    width: 15em;
-    background-color: white;
-    border-radius: 1em;
-    border:white solid 2px;
-}
-.dets{
-    width: 15em;
-    margin-top: 1.5em;
-    line-height: 2em;
+.formBx form h2 {
     font-size: 18px;
-    padding: 1em;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 10px;
     color: white;
 }
-.dets li{
-    list-style-type: none;
+
+.formBx form {
+    display: flex;
+    flex-direction: column;
+}
+
+.formBx form input {
+    position: relative;
+    width: 100%;
+    padding: 10px;
+    background: #f5f5f5;
+    color: #333;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    margin: 8px 0;
+    font-size: 14px;
+    letter-spacing: 1px;
     font-weight: 300;
+
 }
-.dets .name{
+
+.formBx form input[type="submit"] {
+    max-width: 100px;
+    background: #3C6E51;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: 0.5s;
+}
+
+.formBx form .signup {
+    position: relative;
+    margin-top: 20px;
     font-size: 1.2em;
-    font-weight: 600;
+    letter-spacing: 1px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 300;
+    display: flex;
+    flex-direction: column;
 }
-.dets h2{
-    
+
+.formBx form .signup a {
+    font-weight: 600;
+
+    text-decoration: none;
+    color: green;
 }
