--- a/public/main.css
+++ b/public/main.css
@@ -52,7 +52,7 @@ header a {
 }
 .fa-search{
     position: absolute;
-    top:1.3em ;
+    top:1.7em ;
     margin-left: 0.5em;
     cursor: pointer;
 }
@@ -93,34 +93,41 @@ header li {
     border: solid black 2px;
     scale:1;
 }
- ul .content{
-    background-color:white;
+
+/* drop-down */
+
+nav{
+    position: relative;
+}
+.drop-down{
+    display: block;
     position: absolute;
-    width: 10em;
+    left: 13em;
+    top: 50%;
+    display: none;
+}
+.drop-down ul{
+    background-color:white ;
     display: flex;
     flex-direction: column;
-    margin-top: 1.6em;
-    padding: 1em;
-    line-height: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.466);
-    opacity: 0;
-    transition: 0.7s;
-    
+    margin: 10px ;
+}
+.drop-down ul li{
+    width: 150px;
+    padding: 10px;
+    transition: 1.2s;
+}
+
+nav ul li:hover .drop-down{
+    display: block;
+}
+.drop-down ul li:hover{
+    background-color: tomato;
+    scale: 1.1;
+}
+
+ 
    
-}
-nav ul .list:hover > .content{
-    opacity: 1;
-    cursor: pointer;
-    
-}
-.content li{
-    transition: scale 0.8s;
-}
- .content li:hover{
-     background-color:#3C6E51;
-     padding: 0.4em;
-     scale:1.2 ;
- }
 
 .section-one{
     background-image: url(./images/sandwich.webp);
