--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,23 +5,26 @@
         </div>
     <nav>
         <ul class="test">
-            <li><a href="/" class="ul"> Home </a></li>
-            <li><a href="/about" class="ul"> About </a></li>
+            <li class="list"><a href="/" class="ul"> Home </a></li>
+            <li class="list"><a href="/about" class="ul"> About </a></li>
 
-            <li class="list"> Categories <i class="fas fa-caret-down"></i>
+            <li> Categories <i class="fas fa-caret-down"></i>
 
-                <ul class="content">
-                    <li> Vegan </li>
-                    <li> Kid Friendly</li>
-                    <li> Breakfast</li>
-                    <li> Lunch</li>
-                    <li> Dinner</li>
-                    <li> Quick meals</li>
+               <div class="drop-down">
+                <ul>
+                    <li> <a href=""> Vegan</a> </li>
+                    <li> <a href=""> Breakfast</a> </li>
+                    <li> <a href=""> Lunch</a> </li>
+                    <li> <a href=""> Dinner</a> </li>
+                    <li> <a href=""> Dessert</a> </li>
+                
                 </ul>
+               </div>
             
             </li>
-            <li ><a href="" class="log" > Login </a></li>
-            <li><a href="" class="sign-up"> Sign up </a></li>
+
+            <li ><a href="/login" class="log" > Login </a></li>
+            <li><a href="/signup" class="sign-up"> Sign up </a></li>
 
         </ul>
     </nav>
